<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, CallActivity!</string>
    <string name="app_name">扣费克星电话助手</string>
<string name="viewbutton">查找</string>
<string name="lablelocation">来电归属 ：</string>
<string name="lablearea">区号 ：</string>
<string name="str_msg">静音模式</string>
<string name="findarea">归属地查询</string>
<string name="addblack">加到黑名单</string>
<string name="addsuccess">添加成功</string>
<string name="black">黑名单</string>
<string name="white">白名单</string>
<string name="addresslist">通讯录</string>
<string name="notfind">未知地区 </string>
<string name="addsuspicious">添加为一声响电话</string>
<string name="handle">操作</string>
<string name="call">打电话</string>
<string name="sms">发短信</string>
<string name="cancel">取消</string>
<string name="addwhite">加为白名单</string>
<string name="add">添加</string>
<string name="blacklist">黑名单</string>
<string name="callhostory">通话记录</string>
<string name="contact">通讯录</string>
<string name="back">后退</string>
<string name="about">关于</string>
<string name="abouthomepage">\n俺拽网  http://a.opda.cn\n</string>
<string name="aboutcopyright">版权所有© 2007-2010 OPDA Team,\n All rights reserved.</string>
<string name="aboutbutton">确定</string>
<string name="aboutversion">版本 1.0.0 Beta</string>
<string name="backtomain">返回</string> 
<string name="loading">载入中,请稍后...</string> 
<string name="number">号码:</string>
<string name="type">类型:</string>
<string name="remark">备注:</string>
<string name="safenumber">推销</string>
<string name="harassnumber">高额收费</string>
<string name="onesound">一声响</string>
<string name="othernumber">其他</string>
<string name="editcontact">编辑联系人 </string>
<string name="deletefromblack">从黑名单中删除</string>
<string name="tip">此电话可能有高额扣费危险！</string>
<string name="phone">电话</string>
<string name="help">帮助</string>
<string name="helptext">
扣费克星电话助手 v1.0 Beta\n
扣费克星独家采用云端技术，打破传统防骚扰理念，软件智能处理垃圾电话，这样就会大幅度的减少骚扰。
简介：\n
1，领先的云计算技术，几十万的垃圾短信和骚扰电话清单，让手机远离一声响和骚扰电话，防止手机诈骗\n
2，电话归属地功让您对来电去电的号码了如指掌，防止产生长途费或漫游费\n
3，短信拦截同样采用领先的云计算技术，对频繁被举报的垃圾短信直接进入黑名单处理，同时在黑名单中保留记录\n\n
帮助：\n
1，您可以打开通讯录或通话记录中把某一号码设为骚扰电话。\n
2，打开黑名单来管理电话黑名单。\n
3，打开短信来查看已拦截的短信。\n
4，打开设置可以关闭或打开某个功能。\n
5，本软件不定期更新，请保持每周检查更新。\n
</string>
<string name="nullever">从不更新</string>
<string name="onece">一次</string>
<string name="second">两次</string>
<string name="always">一直更新</string>
<string name="set">设置</string>
<string name="blackhandle">黑名单操作</string>
<string name="delete">删除</string>
<string name="addtoweb">上传到云端</string>
<string name="addtoservice">是否添加到云端</string>
<string name="manualCopy">手动更新</string>
<string name="versionSame">已经是最新版本</string>
<string name="nonetwork">当前没有网络</string>
<string name="updatefalse">更新失败</string>
<string name="message">短信</string>
<string name="updateBlack">同步黑名单</string>
<string name="blackcome">黑名单来电，请小心！</string>
<string name="webblackcome">云端黑名单来电，请小心！</string>
<string name="edit">输入黑名单的号码</string>
<string name="deleteall">删除全部</string>
<string name="shift">转移到白名单</string>
<string name="yes">确定</string>
<string name="no">否定</string>
<string name="whiteedit">输入白名单的号码</string>
<string name="shiftblack">转移到黑名单</string>
<string name="shift_tab">转到主页面</string>
<string name="messagestop">短信拦截</string>
<string name="tuixiaoAlert">推销电话，请小心</string>
<string name="saoraoAlert">骚扰电话，请小心</string>
<string name="confirm">确认</string>
<string name="startService">开启服务</string>
<string name="summarystartService">开启时其他服务可以应用/关闭时所有服务都不能应用</string>
<string name="toastStartService">开启时其他服务可以应用</string>
<string name="endService">关闭时所有服务都不能应用</string>
<string name="beginAuto">开机自动启动</string>
<string name="summarybeginAuto">开机后自动启动服务</string>
<string name="notBeginAuto">开机不自动运行服务</string>
<string name="firstSetText">以后更改可在设置里面操作</string>
<string name="setlable">扣费克星实时服务</string>
<string name="contactTitle">联系人操作</string>
<string name="contactdo">联系人操作</string>
<string name="hostoryTitle">通话记录操作</string>
<string name="hostorydo">联系人操作</string>
<string name="messageService">短信服务</string>
<string name="beginMessageService">开启短信防骚扰功能</string>
<string name="summarybeginMessageService">开启短信拦截功能</string>
<string name="offMessageService">关闭短信拦截服务</string>
<string name="beginMessageContent">开启短信拦截实时监控</string>
<string name="blackService">黑名单服务</string>
<string name="beginBlackService">开启防骚扰电话功能</string>
<string name="offBlackService">关闭电话黑名单服务</string>
<string name="blackServiceContent">开启电话黑名单实时监控</string>
<string name="change">更新版本</string>
<string name="beginSendUpService">同步自己的黑名单到云端</string>
<string name="offbeginSendUpService">不同步自己的黑名单到云端</string>
<string name="summaryBeginSendUpService">将自己黑名单中的数据自动同步到云端（不会产生较大的流量）</string>
<string name="inChange">更新中</string>
<string name="beginNetService">开启云防骚扰功能</string>
<string name="showBeginNetService">开启云防骚扰功能会产生少量流量，每月约有200kb左右.</string>
<string name="netChangeService">网络更新服务</string>
<string name="summaryNetChangeService">同步的数据量很小，
不会产生大量的流量,同步后就可以查找云端的黑名单</string>
<string name="beginNetChange">开启网络自动更新</string>
<string name="changedata">更新数据</string>
<string name="notNew">没有新数据</string>
<string name="offNetChange">关闭网络自动更新</string>
<string name="haveSave">已经添加了此号码</string>
<string name="showCallArea">来电去电显示归属地</string>
<string name="offCallArea">不显示电话归属地</string>
<string name="showAreaService">显示电话归属地服务</string>
<string name="summaryShowAreaService">开启时显示电话的省市情况</string>
<string name="singalService">单项服务</string>
<string name="startMessageStop">开启短信拦截</string>
<string name="blacklistShuoMing">现无黑名单，从菜单中和通话记录中可以添加</string>
<string name="updatesuccess">更新成功</string>
<string name="netWrong">网络出错</string>
<string name="downLoadBlack">更新云端的黑名单数据</string>
<string name="upToService">本地黑名单传到云端</string>
<string name="haveNoUnSend">没有未上传的黑名单</string>
<string name="upSuccess">上传成功</string>
<string name="firstHelp">如果需要设置，在设置功能里面有更多的服务控制</string>
<string name="blacklistdown">下载黑名单</string>
<string name="blacklistup">上传黑名单</string>
<string name="phonestop">电话过滤</string>
</resources>
