<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content">
  <RadioGroup android:id="@+id/websetGroup"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content">
	    <RadioButton 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:id="@+id/onece"
	        android:text="@string/onece" />
	    <RadioButton 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:id="@+id/second"
	        android:text="@string/second" />
	    <RadioButton 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:id="@+id/always"
	        android:text="@string/always" />
	    <RadioButton 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:id="@+id/safenumber"
	        android:text="@string/nullever" />
	</RadioGroup>
</LinearLayout>
