<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
  <LinearLayout 
		android:id="@+id/LinearLayout01" 
		android:layout_height="wrap_content" 
		android:orientation="vertical" 
		android:layout_width="fill_parent">
	<RelativeLayout 
		android:layout_height="wrap_content" 
		android:layout_width="fill_parent">
		<RadioGroup android:id="@+id/radioGroupHostory"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content">
	    <RadioButton 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:id="@+id/onesoundHostory"
	        android:text="@string/onesound" />
	    <RadioButton 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:id="@+id/harassnumberHostory"
	        android:text="@string/harassnumber" />
	    <RadioButton 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:id="@+id/safenumberHostory"
	        android:text="@string/safenumber" />
	    <RadioButton 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:id="@+id/othernumberHostory"
	        android:text="@string/othernumber" />
	    <RadioButton 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:id="@+id/messageBlackHostory"
	        android:text="@string/message" />
	</RadioGroup>
	</RelativeLayout>
  <RelativeLayout 
	android:layout_height="wrap_content" 
	android:layout_width="fill_parent">
	<TextView
	android:layout_width="wrap_content"
	  android:layout_height="wrap_content"
	  android:id="@+id/remarklableHostory"
	  android:text="@string/remark"
	  />
  <EditText
  android:layout_width="160px"
  android:layout_height="wrap_content"
	  android:layout_toRightOf="@id/remarklableHostory"
  android:id="@+id/editremarkHostory"
  />
  </RelativeLayout>
  </LinearLayout>
</RelativeLayout>
